<resources>
    <!--choose-->
    <string name="app_name">AgriStreetApp</string>
    <string name="label_pebisnis">Pebisnis</string>
    <string name="label_petani">Petani</string>
    <string name="masuk_sebagai">Masuk Sebagai:</string>
    <string name="deskripsi_user">Anda dapat memilih menjadi pebisnis atau petani. Sebagai pebisnis Anda dapat membuka lowongan komoditas dan sebagai petani Anda dapat menawarkan komoditas pada sebuah lowongan yang dibuka.</string>

    <!--login-->
    <string name="masuk">Masuk</string>
    <string name="_62">+62</string>
    <string name="hint_nomor_telepon">Nomor Telepon</string>
    <string name="ubah">Ubah</string>

    <!-- Profil Pengguna -->
    <string name="profil">Profil Pengguna</string>
    <string name="desc_welcome">Selamat Datang! Silahkan lengkapi data anda.</string>
    <string name="hint_nama">Nama Lengkap</string>
    <string name="hint_no_id">No ID KTP/KTM/NISN dsb..</string>
    <string name="simpan">Simpan</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="desc_nomor_telepon_profile">Anda masuk dengan nomor telepon +</string>
    <string name="alamat">Alamat</string>
    <string name="nomor_telepon">Nomor Telepon</string>
    <string name="riwayat">Riwayat</string>
    <string name="logout">Logout</string>

    <!-- Deskripsi Lowongan -->
    <string name="deskripsi_lowongan">Deskripsi Lowongan</string>
    <string name="judul">Judul</string>
    <string name="kategori">Kategori</string>
    <string name="tanggal_tutup">Tanggal Tutup</string>
    <string name="jumlah_komoditas">Jumlah Komoditas (kg)</string>
    <string name="jumlah_pelamar">Jumlah Pelamar</string>
    <string name="bid">BID</string>
    <string name="deskripsi">Deskripsi</string>

    <!-- Masukan code-->
    <string name="masukan_kode_verifikasi">Masukan Kode Verifikasi</string>
    <string name="ubah_nomor_telepon">Ubah Nomor Telepon</string>
    <string name="hint_kode_verifikasi">Kode Verifikasi</string>
    <string name="desc_nomor_telepon">Kami telah mengirimkan pesan ke nomor</string>
    <string name="kirim_ulang_kode">Kirim Ulang Kode</string>

    <!-- Pengajuan Bid -->
    <string name="ajukan_bid">Ajukan Bid</string>
    <string name="keterangan_promosikan">Keterangan (Promosikan Komoditas Anda)</string>
    <string name="harga_tawar">Harga Tawar</string>
    <string name="bid_sekarang">Bid Sekarang</string>

    <!-- Beri Feedback -->
    <string name="feedback_icon">Apa yang Anda rasakan?</string>
    <string name="feedback_kesan">Masukan kesan dan pesan</string>
    <string name="feedback">Feedback</string>

    <!-- Kerjasama -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tambah_lowongan">Tambah Lowongan</string>
    <string name="ubah_tanggal_tutup">Ubah tanggal tutup</string>
    <string name="harga_sepakat">Harga Sepakat</string>
    <string name="tanggal_kerja_sama">Tanggal Kerja Sama</string>
    <string name="status">Status</string>
    <string name="nama_pebisnis">Nama Pebisnis</string>
    <string name="nama_petani">Nama Petani</string>
    <string name="detail_kerjasama">Detail Kerjasama</string>
    <string name="harga_awal">Harga Awal</string>
    <string name="pilih_petani">Pilih Petani</string>
    <string name="selesai">Selesai</string>
    <string name="beri_feedback">Beri Feedback</string>
    <string name="detail_ajukan_bid">Detail Ajukan Bid</string>
    <string name="keterangan">Keterangan</string>

</resources>
