<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="118dp"
        android:text="@string/masukan_kode_verifikasi"
        android:textColor="@color/primaryTextColor"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/tv_desc_nomor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/desc_nomor_telepon"
        android:textColor="@color/secondaryTextColor"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/tv_ubah_nomor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="6dp"
        android:layout_marginTop="10dp"
        android:text="@string/ubah_nomor_telepon"
        android:textColor="@color/primaryColor" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:errorEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_kode_verifikasi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="4dp"
                android:layout_marginStart="16dp"
                android:hint="@string/hint_kode_verifikasi"
                android:inputType="number" />

        </android.support.design.widget.TextInputLayout>

        <ImageView
            android:id="@+id/iv_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp"
            android:paddingEnd="16dp"
            android:paddingLeft="4dp"
            android:paddingRight="16dp"
            android:paddingStart="4dp"
            android:paddingTop="28dp"
            android:src="@drawable/ic_cancel_white"
            android:tint="@color/secondaryTextColor"
            android:visibility="invisible" />

    </LinearLayout>

    <Button
        android:id="@+id/bt_kirim_ulang"
        android:layout_width="200dp"
        android:layout_height="36dp"
        android:layout_gravity="center"
        android:layout_marginTop="18dp"
        android:background="@color/secondaryColor"
        android:text="@string/kirim_ulang_kode"
        android:textColor="@color/primaryTextColor" />


</LinearLayout>
