<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    tools:context="id.agristreet.agristreetapp.ui.ProfileActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/iv_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:paddingBottom="8dp"
                    android:paddingEnd="8dp"
                    android:paddingLeft="0dp"
                    android:paddingRight="8dp"
                    android:paddingStart="0dp"
                    android:paddingTop="8dp"
                    android:src="@drawable/ic_arrow_back_white"
                    android:visibility="gone"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:paddingEnd="4dp"
                    android:paddingLeft="4dp"
                    android:paddingRight="4dp"
                    android:paddingStart="4dp"
                    android:text="@string/profil"
                    android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
                    android:textColor="@color/white"/>

            </LinearLayout>

        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/tv_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:text="@string/desc_welcome"
                android:textColor="@color/secondaryTextColor"
                android:textSize="16sp"/>

            <FrameLayout
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/iv_photo"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/circle_white"
                    android:src="@drawable/ic_person"/>

                <ImageView
                    android:id="@+id/iv_input_photo"
                    android:layout_width="52dp"
                    android:layout_height="52dp"
                    android:layout_gravity="bottom|end"
                    android:layout_margin="2dp"
                    android:background="@drawable/circle_primary"
                    android:padding="14dp"
                    android:src="@drawable/ic_camera"/>

            </FrameLayout>

            <TextView
                android:id="@+id/tv_phoneNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:gravity="center_horizontal"
                android:text="@string/desc_nomor_telepon_profile"
                android:textColor="@color/secondaryTextColor"
                android:textSize="14sp"/>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_nama"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_nama"
                    android:inputType="textPersonName|textCapWords"
                    android:maxLines="1"/>

            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/et_alamat"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_weight="1"
                    android:text="@string/alamat"
                    android:textColor="@color/primaryTextColor"
                    android:textSize="18sp"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:rotation="180"
                    android:src="@drawable/ic_arrow_back_white"
                    android:tint="@color/primaryTextColor"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/bt_riwayat"
                    android:layout_width="0dp"
                    android:layout_height="36dp"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:background="@color/secondaryColor"
                    android:enabled="false"
                    android:text="@string/riwayat"
                    android:textColor="@color/primaryTextColor"/>

                <Button
                    android:id="@+id/bt_feedback"
                    android:layout_width="0dp"
                    android:layout_height="36dp"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:background="@color/secondaryColor"
                    android:enabled="false"
                    android:text="@string/feedback"
                    android:textColor="@color/primaryTextColor"/>

            </LinearLayout>

            <Button
                android:id="@+id/bt_simpan"
                android:layout_width="200dp"
                android:layout_height="36dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="@color/divider"
                android:enabled="false"
                android:text="@string/simpan"
                android:textColor="@color/secondaryTextColor"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
