<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context="id.agristreet.agristreetapp.ui.AjukanBidActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/iv_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:paddingBottom="8dp"
                    android:paddingEnd="8dp"
                    android:paddingLeft="0dp"
                    android:paddingRight="8dp"
                    android:paddingStart="0dp"
                    android:paddingTop="8dp"
                    android:src="@drawable/ic_arrow_back_white" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:paddingEnd="4dp"
                    android:paddingLeft="4dp"
                    android:paddingRight="4dp"
                    android:paddingStart="4dp"
                    android:text="@string/ajukan_bid"
                    android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
                    android:textColor="@color/white" />

            </LinearLayout>

        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="14dp">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/keterangaan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minLines="5"
                    android:gravity="top"
                    android:hint="@string/keterangan_promosikan"
                    android:inputType="textMultiLine|textAutoComplete" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputEditText
                android:id="@+id/harga_tawar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/harga_tawar"
                android:inputType="number"
                android:maxLines="1" />

            <Button
                android:id="@+id/bt_simpan"
                android:layout_width="200dp"
                android:layout_height="36dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="@color/divider"
                android:enabled="false"
                android:text="@string/bid_sekarang"
                android:textColor="@color/secondaryTextColor" />

        </LinearLayout>

    </ScrollView>


</LinearLayout>
