<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context="id.agristreet.agristreetapp.ui.BeriFeedbackActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/iv_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:paddingBottom="8dp"
                    android:paddingEnd="8dp"
                    android:paddingLeft="0dp"
                    android:paddingRight="8dp"
                    android:paddingStart="0dp"
                    android:paddingTop="8dp"
                    android:src="@drawable/ic_arrow_back_white"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:paddingEnd="4dp"
                    android:paddingLeft="4dp"
                    android:paddingRight="4dp"
                    android:paddingStart="4dp"
                    android:text="@string/feedback"
                    android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
                    android:textColor="@color/white"/>

            </LinearLayout>

        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/feedback_icon"
        android:padding="8dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="8dp">

        <ImageView
            android:id="@+id/happy"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:src="@drawable/ic_happy"
            android:tint="@color/primaryColor"/>

        <ImageView
            android:id="@+id/neutral"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:src="@drawable/ic_neutral"
            android:tint="@color/divider"/>

        <ImageView
            android:id="@+id/sad"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:src="@drawable/ic_sad"
            android:tint="@color/divider"/>
    </LinearLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:padding="8dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/kesan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/feedback_kesan"
            android:inputType="textAutoComplete"/>

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/simpan"
        android:layout_width="200dp"
        android:layout_height="36dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@color/divider"
        android:enabled="false"
        android:text="@string/simpan"
        android:textColor="@color/secondaryTextColor"/>

</LinearLayout>
